Fargate_API_FE_DB/subnet_api.tf
resource "aws_subnet" "public_api" {
  vpc_id     = aws_vpc.main.id
  cidr_block = "10.0.1.0/24"

  tags = {
    Api  = var.name_api
    Name = "subnet-public"
  }
}

resource "aws_subnet" "private_api" {
  vpc_id     = aws_vpc.main.id
  cidr_block = "10.0.2.0/24"

  tags = {
    App  = var.name_api
    Name = "subnet-private"
  }
}

resource "aws_subnet" "db_a" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.3.0/24"
  availability_zone       = "${var.aws_region}a"
  map_public_ip_on_launch = true

  tags = {
    App  = var.name_api
    Name = "subnet-db_a"
  }
}

resource "aws_subnet" "db_b" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.4.0/24"
  availability_zone       = "${var.aws_region}b"
  map_public_ip_on_launch = true

  tags = {
    App  = var.name_api
    Name = "subnet-db_b"
  }
}

resource "aws_db_subnet_group" "default" {
  name        = "${var.environment_name}-db"
  description = "Subnet group for DB"
  subnet_ids  = [aws_subnet.db_a.id, aws_subnet.db_b.id]

  tags = {
    App  = var.name_api
    Name = "subnet-group-db"
  }
}
